--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@iconscout/react-unicons": "^2.0.2",
+    "luxon": "^3.4.4",
+    "next": "14.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "postcss": "^8",
